# service-desk-bot

./: .copier-answers.yml  .gitlab-ci.yml  Dockerfile  advanced-deploy.md  apk-packages.txt  docker-compose.yml  example.env  pyproject.toml  upgrade-packages.sh
app/: settings.py
app/api/endpoints/: botx.py
app/bot/: bot.py
app/bot/answers/bubbles/: common.py  support_request.py
app/bot/answers/keyboards/: common.py  support_request.py
app/bot/answers/messages/: common.py  support_request.py
app/bot/commands/: common.py  listing.py
app/bot/commands/support_request/: create.py  send.py  update.py
app/bot/error_handlers/: internal_error.py
app/bot/middlewares/: confirm_cancel.py
app/bot/states/: support_request.py
app/db/migrations/: env.py
app/db/repositories/: exchange.py  service_desk.py
app/resources/: strings.py
app/resources/templates/: chat_created.txt.mako  confirm_request.txt.mako  default.txt.mako  existing_attachments.txt.mako  help.txt.mako  mail_body.txt.mako  max_description_length_exceeded.txt.mako  subject.txt.mako
app/schemas/: enums.py  support_request.py
app/services/: decorators.py  exchange.py  service_desk.py
app/worker/: worker.py
scripts/: lint
tests/: conftest.py
tests/commands/: conftest.py  test_common.py
tests/commands/support_request/: test_create.py  test_send.py  test_update.py
tests/endpoints/: test_botx.py
tests/middlewares/: test_confirm_cancel.py
tests/repositories/: conftest.py  test_service_desk.py
tests/services/: test_botx_user_search.py
