# https://python-poetry.org/docs/

[tool.poetry]
name = "service-desk-bot"
version = "1.0.5"
description = ""
authors = []


[tool.poetry.dependencies]
python = ">=3.9,<3.14"

pybotx = "^0.75.0"
pybotx-smart-logger = "~0.11.0"
pybotx-fsm = "~0.6.1"


fastapi = "~0.115.12"
uvicorn = { version = "~0.17.5", extras = ["standart"] }
gunicorn = "~23.0.0"
setuptools = "~77.0.1"
loguru = ">=0.6.0,<0.7.0"
mako = "~1.2.2"
pydantic = { version = "~1.10.4", extras = ["dotenv", "email"] }
virtualenv = "~20.26.6"
alembic = "~1.7.6"
SQLAlchemy = "~2.0.0"
asyncpg = "~0.30.0"  # DB backend for application
psycopg2-binary = "~2.9.2"  # DB backend for alembic (migration tool)
starlette = "~0.40.0"
redis = "~4.4.4"
saq = { version = "~0.7.1", extras = ["hiredis"] }

importlib-resources = { version = "^5.4.0", python = "<3.9" }
zipp = { version = "^3.7.0", python = "<3.9" }
importlib-metadata = { version = "^4.11.0", python = "<3.9" }
types-aiofiles = "^23.1.0.4"
exchangelib = "5.1.0"
types-requests = "^2.31.0.1"


[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.1"
autoflake = "1.4.0"
black = "22.3.0"
isort = "5.10.1"
mypy = "^1.10.0"
wemake-python-styleguide = "0.16.0"

flake8-bandit = "2.1.2"  # https://github.com/PyCQA/bandit/issues/837
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

pytest = "~7.2.0"
pytest-asyncio = "~0.18.2"
pytest-cov = "~3.0.0"

asgi-lifespan = "~1.0.1"
requests = "~2.31.0"
respx = "~0.21.1"
httpx = "~0.28.0"

markdown = "3.3.6"  # https://github.com/python-poetry/poetry/issues/4777


[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
